# sal

./: .gitignore  .gitmodules  COPYING  INSTALL  LICENSE.TXT  Makefile.am  README  README.TXT  configure.ac  graphiceq_test.cpp  kemarmicembed.cpp  peakingfilters.cpp  sal.vcxproj  sal.vcxproj.filters  sofamic.cpp  sofamic_test.cpp
MCL.xcodeproj/: project.pbxproj
MCL.xcodeproj/xcshareddata/xcschemes/: MCL (with SH).xcscheme  MCL.xcscheme  MCL_benchmark.xcscheme  MCL_test.xcscheme  MCLiOS.xcscheme
SAL-old.xcodeproj/: project.pbxproj
SAL-old.xcodeproj/xcshareddata/xcschemes/: SAL print Kemar.xcscheme  SAL test.xcscheme  SAL.xcscheme  SALiOS.xcscheme
SAL.xcodeproj/: project.pbxproj
SAL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SAL.xcodeproj/xcshareddata/xcschemes/: SAL Tests.xcscheme  SAL print Kemar.xcscheme  SAL test (with SH).xcscheme  SAL test.xcscheme  SAL.xcscheme  SALiOS.xcscheme  libmysofa.xcscheme
SAT.xcodeproj/: project.pbxproj
butter/include/: butter.h
butter/src/: butter.cpp
doc/: mainpage.dox
docs/: README.md  mainpage.dox
hrtfs/kemar/: kemardir_data.hpp  kemarmicdata.cpp  kemarmicdata.hpp
hrtfs/kemar_compact/: kemarcompactdata.cpp  kemarmicdata.cpp
include/: ambisonics.h  ambisonics.hpp  array.h  array.hpp  audiobuffer.h  audiobuffer.hpp  basicop.h  binauraldir.hpp  binauralmic.h  binauralmic.hpp  bypassmic.h  cipicdir.hpp  cipicdirectivity.hpp  cipicmic.h  cipicmic.hpp  comparisonop.h  constants.h  cuboidroom.h  cuboidroom.hpp  dataop.h  decoder.h  decoder.hpp  delayfilter.h  delayfilter.hpp  delayline.h  digitalfilter.h  directivity.hpp  elementaryop.h  equalityop.h  exception.h  fdtd.h  fdtd.hpp  firfilter.h  freefieldsimulation.h  freefieldsimulation.hpp  graphiceq.h  iirfilter.h  ism.h  ism.hpp  kemardir.hpp  (+55 more)
include/dsp/: basicop.h  butter.h  comparisonop.h  constants.h  dataop.h  digitalfilter.h  dsptypes.h  elementaryop.h  firfilter.h  graphiceq.h  iirfilter.h  matrixop.h  maxgradientfilter.h  mcltypes.h  peakingfilters.h  point.h  pointwiseop.h  quaternion.h  randomop.h  statisticsop.h  transformop.h  vectorop.h
include/impl/: ambisonics.ipp  audiobuffer.ipp  cuboidroom.ipp  delayfilter.ipp  fdtd.ipp  freefieldsimulation.ipp  ism.ipp  kemardir.ipp  propagationline.ipp  receiver.ipp  tdbem.ipp  wavhandler.ipp
include/lib/: butter.h  kiss_fft.h  kissfft.hh
kissfft/include/: kiss_fft.h
lib/cipic/subject21/: matlab.mat
libsndfile/include/: sndfile.h
mcl/: AUTHORS  INSTALL
mcl/MCL.xcodeproj/: project.pbxproj
mcl/MCL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mcl/include/: dataop.h  maxgradientfilter.h  transformop.h
mcl/kissfft/include/: kiss_fft.h  kissfft.hh
mcl/src/: graphiceq.cpp  quaternion.cpp  vectorop.cpp
mcl/src/test/: comparisonop_test.cpp  elementaryop_test.cpp  matrixop_test.cpp  pointwiseop_test.cpp  statisticsop_test.cpp  vectorop_test.cpp
resources/hrtfs/aachen_kemar/: .gitignore  README  convert_to_dtf.m  test_aachen_kemar.m
resources/hrtfs/kemar_diffuse/: kemardiffusedata.cpp
resources/hrtfs/kemar_full/: kemarfulldata.cpp
src/: ambisonics.cpp  audiobuffer_impl.hpp  basicop.cpp  binauralmic.cpp  bypassmic.cpp  cipicdir_impl.hpp  cipicmic.cpp  comparisonop.cpp  cuboidroom.cpp  dataop.cpp  delayfilter.cpp  delayfilter_impl.hpp  delayline.cpp  elementaryop.cpp  equalityop.cpp  fdtd.cpp  firfilter.cpp  freefieldsimulation.cpp  graphiceq.cpp  iirfilter.cpp  ism.cpp  ism_impl.hpp  kemardir_impl.hpp  kemarmic.cpp  matrixop.cpp  microphone.cpp  microphonearray.cpp  pawrapper.cpp  pawrapper_impl.hpp  peakingfilters.cpp  point.cpp  pointwiseop.cpp  propagationline.cpp  propagationline_impl.hpp  quaternion.cpp  rampsmoother_impl.hpp  random.cpp  randomop.cpp  receiver_impl.hpp  riranalysis.cpp  (+13 more)
src/dsp/: basicop.cpp  butter.cpp  comparisonop.cpp  dataop.cpp  elementaryop.cpp  firfilter.cpp  graphiceq.cpp  iirfilter.cpp  matrixop.cpp  peakingfilters.cpp  point.cpp  pointwiseop.cpp  quaternion.cpp  randomop.cpp  statisticsop.cpp  transformop.cpp  vectorop.cpp
src/lib/: butter.cpp
src/targets/: mcl_test.cpp  sal_tests.cpp  sat_tests.cpp
src/test/: ambisonics_test.cpp  ambisonics_test.ipp  audiobuffer_test.cpp  audiobuffer_test.hpp  audiobuffer_test.ipp  basicop_test.cpp  cipicdirectivity_test.hpp  cipicdirectivity_test.ipp  cipicmic_test.cpp  comparisonop_test.cpp  cuboidroom_test.cpp  cuboidroom_test.ipp  delayfilter_test.cpp  delayfilter_test.hpp  delayfilter_test.ipp  digitalfilter_test.cpp  elementaryop_test.cpp  exception_test.cpp  fdtd_test.cpp  fdtd_test.ipp  freefieldsimulation_test.cpp  freefieldsimulation_test.ipp  graphiceq_test.cpp  ism_test.cpp  ism_test.ipp  kemarmic_test.cpp  kemarmic_test.hpp  kemarmic_test.ipp  matrixop_test.cpp  microphone_test.cpp  microphone_test.hpp  microphonearray_test.cpp  point_test.cpp  pointwiseop_test.cpp  propagationline_test.cpp  propagationline_test.hpp  quaternion_test.cpp  random_test.cpp  receiver_test.hpp  receiver_test.ipp  (+14 more)
src/tests/: ambisonics_test.cpp  delayfilter_test.cpp  freefieldsimulation_test.cpp  kemarmic_test.cpp  microphone_test.cpp  microphonearray_test.cpp  point_test.cpp  propagationline_test.cpp  psrmic_test.cpp  sphericalheadmic_test.cpp  stream_test.cpp  tools_test.cpp
test/: ambisonics_test.cpp  basicop_test.cpp  cipicmic_test.cpp  comparisonop_test.cpp  delayfilter_test.cpp  digitalfilter_test.cpp  elementaryop_test.cpp  kemarmic_test.cpp  matrixop_test.cpp  pointwiseop_test.cpp  propagationline_test.cpp  psrmic_test.cpp  random_test.cpp  sphericalheadmic_test.cpp  statisticsop_test.cpp  stream_test.cpp  transformop_test.cpp  vectorop_test.cpp
tests/: mcl_benchmark.cpp  mcl_test.cpp  sal_tests.cpp
tests/unit/: ambisonics_test.cpp  audiobuffer_test.cpp  cuboidroom_test.cpp  delayfilter_test.cpp  fdtd_test.cpp  freefieldsimulation_test.cpp  ism_test.cpp  kemarmic_test.cpp  microphone_test.cpp  microphonearray_test.cpp  propagationline_test.cpp  riranalysis_test.cpp  salutilities_test.cpp  shsource_test.cpp  sofamic_test.cpp  source_test.cpp  sphericalheadmic_test.cpp  tdbem_test.cpp
(+28 files in other folders)
